bynkc/tests/fixtures/negative/228_refinement_base_not_bearer/src/demo.bynk
context demo

actor Admin = Visitor where hasClaim("admin")

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by a: Admin {
    Ok("x")
  }
}
